alignment of center home block, letterspacing and fix of new post

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -17,6 +17,7 @@
 
     .sitename {
         margin-left: 0 !important;
+        letter-spacing: normal !important;
     }
     .menu-items {
         flex-grow: 1;
